@@ -12,16 +12,16 @@
  */
 package org.openhab.binding.robonect.internal.handler;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.junit.Assert.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
 
-import java.util.Calendar;
+import java.time.Month;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 
 import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.smarthome.core.i18n.TimeZoneProvider;
 import org.eclipse.smarthome.core.library.types.DateTimeType;
 import org.eclipse.smarthome.core.library.types.DecimalType;
 import org.eclipse.smarthome.core.library.types.OnOffType;
@@ -38,6 +38,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.openhab.binding.robonect.internal.RobonectBindingConstants;
 import org.openhab.binding.robonect.internal.RobonectClient;
@@ -53,7 +54,7 @@ import org.openhab.binding.robonect.internal.model.Wlan;
 
 /**
  * The goal of this class is to test RobonectHandler in isolation.
- * 
+ *
  * @author Marco Meyer - Initial contribution
  */
 public class RobonectHandlerTest {
@@ -72,12 +73,17 @@ public class RobonectHandlerTest {
     @Mock
     private HttpClient httpClientMock;
 
+    @Mock
+    private TimeZoneProvider timezoneProvider;
+
     @Before
     public void setUp() {
         MockitoAnnotations.initMocks(this);
-        subject = new RobonectHandler(robonectThingMock, httpClientMock);
+        subject = new RobonectHandler(robonectThingMock, httpClientMock, timezoneProvider);
         subject.setCallback(callbackMock);
         subject.setRobonectClient(robonectClientMock);
+
+        Mockito.when(timezoneProvider.getTimeZone()).thenReturn(ZoneId.of("Europe/Berlin"));
     }
 
     @Test
@@ -108,15 +114,14 @@ public class RobonectHandlerTest {
 
         State value = stateCaptor.getValue();
         assertTrue(value instanceof DateTimeType);
-        DateTimeType dateTimeType = (DateTimeType) value;
-        assertEquals(1, dateTimeType.getCalendar().get(Calendar.DAY_OF_MONTH));
 
-        assertEquals(2017, dateTimeType.getCalendar().get(Calendar.YEAR));
-        // calendar january is 0
-        assertEquals(4, dateTimeType.getCalendar().get(Calendar.MONTH));
-        assertEquals(19, dateTimeType.getCalendar().get(Calendar.HOUR_OF_DAY));
-        assertEquals(0, dateTimeType.getCalendar().get(Calendar.MINUTE));
-        assertEquals(0, dateTimeType.getCalendar().get(Calendar.SECOND));
+        ZonedDateTime zdt = ((DateTimeType) value).getZonedDateTime();
+        assertEquals(1, zdt.getDayOfMonth());
+        assertEquals(2017, zdt.getYear());
+        assertEquals(Month.MAY, zdt.getMonth());
+        assertEquals(19, zdt.getHour());
+        assertEquals(0, zdt.getMinute());
+        assertEquals(0, zdt.getSecond());
     }
 
     @Test
@@ -131,7 +136,7 @@ public class RobonectHandlerTest {
         error.setDate("01.05.2017");
         error.setTime("19:00:00");
         error.setUnix("1493665200");
-        error.setErrorCode(new Integer(22));
+        error.setErrorCode(Integer.valueOf(22));
         error.setErrorMessage("Dummy Message");
         mowerInfo.getStatus().setStatus(MowerStatus.ERROR_STATUS);
         mowerInfo.setError(error);
@@ -159,14 +164,14 @@ public class RobonectHandlerTest {
 
         State errorDate = errorDateCaptor.getValue();
         assertTrue(errorDate instanceof DateTimeType);
-        DateTimeType dateTimeType = (DateTimeType) errorDate;
-        assertEquals(1, dateTimeType.getCalendar().get(Calendar.DAY_OF_MONTH));
-        assertEquals(2017, dateTimeType.getCalendar().get(Calendar.YEAR));
-        // calendar january is 0
-        assertEquals(4, dateTimeType.getCalendar().get(Calendar.MONTH));
-        assertEquals(19, dateTimeType.getCalendar().get(Calendar.HOUR_OF_DAY));
-        assertEquals(0, dateTimeType.getCalendar().get(Calendar.MINUTE));
-        assertEquals(0, dateTimeType.getCalendar().get(Calendar.SECOND));
+
+        ZonedDateTime zdt = ((DateTimeType) errorDate).getZonedDateTime();
+        assertEquals(1, zdt.getDayOfMonth());
+        assertEquals(2017, zdt.getYear());
+        assertEquals(Month.MAY, zdt.getMonth());
+        assertEquals(19, zdt.getHour());
+        assertEquals(0, zdt.getMinute());
+        assertEquals(0, zdt.getSecond());
 
         State errorMessage = errorMessageCaptor.getValue();
         assertTrue(errorMessage instanceof StringType);
@@ -293,8 +298,8 @@ public class RobonectHandlerTest {
         assertEquals("Mowy", stateCaptorName.getValue().toFullString());
         assertEquals(99, ((DecimalType) stateCaptorBattery.getValue()).intValue());
         assertEquals(4, ((DecimalType) stateCaptorStatus.getValue()).intValue());
-        assertEquals(55, ((QuantityType) stateCaptorDuration.getValue()).intValue());
-        assertEquals(22, ((QuantityType) stateCaptorHours.getValue()).intValue());
+        assertEquals(55, ((QuantityType<?>) stateCaptorDuration.getValue()).intValue());
+        assertEquals(22, ((QuantityType<?>) stateCaptorHours.getValue()).intValue());
         assertEquals(MowerMode.AUTO.name(), stateCaptorMode.getValue().toFullString());
         assertEquals(OnOffType.ON, stateCaptorStarted.getValue());
         assertEquals(-88, ((DecimalType) stateCaptorWlan.getValue()).intValue());
